--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./header-logo.css">
   <link rel="stylesheet" href="./banner-home.css">
+  <link rel="stylesheet" href="./footer.css">
   <link rel="icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
@@ -68,6 +69,9 @@
     </section>
   </main>
 
-  <script src="main.js"></script>
+  <footer>
+    <p>por #amor #respeito #vidasSalvas</p>
+    <p>by Familia Menezes - 2023</p>
+  </footer>
 </body>
 </html>
