Implantação do Sass

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doa Sangue | Salve vidas!</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./header-logo.css">
-  <link rel="stylesheet" href="./banner-home.css">
-  <link rel="stylesheet" href="./footer.css">
+ 
+  <link rel="stylesheet" href="./scss/style.css">
+
   <link rel="icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <a class="header-logo" href="index.html">
@@ -29,7 +29,7 @@
   </header>
 
   <main>
-    <h1>#doaSANGUE - Salve vidas!</h1>
+    <h1 class="typewriter">#doaSANGUE - Salve vidas!</h1>
     <section id="sobre">
       <h2>Sobre a Doação de Sangue</h2>
       <p>A doação de sangue é um ato voluntário que pode salvar vidas. Ao doar sangue, você está ajudando pessoas em situações de emergência, pacientes que precisam de transfusões, e indivíduos com doenças crônicas.</p>
