--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
   <main>
     <h1 class="typewriter">#doaSANGUE - Salve vidas!</h1>
-    <section id="sobre">
+    <section id="sobre" class="animated-section">
       <h2>Sobre a Doação de Sangue</h2>
       <p>A doação de sangue é um ato voluntário que pode salvar vidas. Ao doar sangue, você está ajudando pessoas em situações de emergência, pacientes que precisam de transfusões, e indivíduos com doenças crônicas.</p>
     </section>
 
-    <section id="beneficios">
+    <section id="beneficios" class="animated-section">
       <h2>Benefícios da Doação de Sangue</h2>
       <ul>
         <li>Ajuda a identificar problemas de saúde</li>
@@ -46,7 +46,7 @@
     </section>
 
     
-      <section id="requisitos">
+      <section id="requisitos" class="animated-section">
         <h2>Requisitos para Doar Sangue</h2>
         <p>Para doar sangue, você precisa atender aos seguintes requisitos:</p>
         <ul>
@@ -59,9 +59,10 @@
         </ul>
       </section>
    
-    <section id="contato">
+    <section id="contato" class="animated-section">
       <h2>Entre em Contato</h2>
       <p>Se você deseja se tornar um doador de sangue ou tem alguma dúvida, entre em contato conosco pelos seguintes meios:</p>
+      <br>
       <ul>
         <li>Telefone: (XX) XXXX-XXXX</li>
         <li>Email: contato@doacaodesangue.com</li>
@@ -73,5 +74,8 @@
     <p>por #amor #respeito #vidasSalvas</p>
     <p>by Familia Menezes - 2023</p>
   </footer>
+  
+<script src="./js/animation.js"></script>
+
 </body>
 </html>
