Incluso botão ACIMA

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doa Sangue | Salve vidas!</title>
- 
   <link rel="stylesheet" href="./scss/style.css">
-
   <link rel="icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+  <script src="./js/animation.js" defer></script>
+<script src="./js/botaoTopo.js" defer></script>
 </head>
 
 <body>
@@ -74,8 +74,11 @@
     <p>por #amor #respeito #vidasSalvas</p>
     <p>by Familia Menezes - 2023</p>
   </footer>
-  
-<script src="./js/animation.js"></script>
+
+<button class="botao-topo"></button>
+
+
+
 
 </body>
 </html>
