--- a/apoiadores.html
+++ b/apoiadores.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doa Sangue | Salve vidas!</title>
   <link rel="stylesheet" href="./scss/style.css">
-  <link rel="icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/img/blood_icon_149283.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-  <script src="./js/animation.js" defer></script>
 <script src="./js/botaoTopo.js" defer></script>
 </head>
 
@@ -23,6 +21,7 @@
         <li><a href="./index.html">Início</a></li>
         <li><a href="./apoiadores.html">Apoiadores</a></li>
         <li><a href="./depoimentos.html">Depoimentos</a></li>
+        <li><a href="./acervo.html">Acervo</a></li>
         
       </ul>
     </nav>
@@ -30,6 +29,7 @@
 
   <main>
     <h1>Apoiadores</h1>
+    <br>
     <h2>Seja um apoiador do Projeto.</h2>
     <br><br>
 
@@ -73,7 +73,7 @@
   </main>
 
   <footer>
-    <p>doaSANGUE - 2023</p>
+    <p>doaSANGUE - 2023 - Versão 1.0</p>
   </footer>
 
 <button class="botao-topo"></button>
