--- a/dvw.html
+++ b/dvw.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doa Sangue | Salve vidas!</title>
   <link rel="stylesheet" href="./scss/style.css">
-  <link rel="icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="./assets/img/doasangueFavicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/img/blood_icon_149283.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-  <script src="./js/animation.js" defer></script>
 <script src="./js/botaoTopo.js" defer></script>
 </head>
 
@@ -23,6 +21,7 @@
         <li><a href="./index.html">Início</a></li>
         <li><a href="./apoiadores.html">Apoiadores</a></li>
         <li><a href="./depoimentos.html">Depoimentos</a></li>
+        <li><a href="./acervo.html">Acervo</a></li>
         
       </ul>
     </nav>
@@ -30,6 +29,7 @@
 
   <main>
     <h1>Doença de von Willebrand</h1>
+    <br>
     <h2>Nesta pagina conteúdo rico sobre a doença</h2>
     <br><br>
 
@@ -40,15 +40,23 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet laudantium optio perferendis
       repudiandae sed delectus ipsa animi totam? Expedita quasi sapiente quibusdam illum. Ipsam deleniti,
       repellendus facere expedita nemo eius.</p>
-<br>
+    <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet laudantium optio perferendis
       repudiandae sed delectus ipsa animi totam? Expedita quasi sapiente quibusdam illum. Ipsam deleniti,
       repellendus facere expedita nemo eius.</p>
-    
+      <br>
+      <h2>Saiba MAIS:</h2>
+      <h3>O <span class="red-text">doaSANGUE</span>  é o maior <span class="texto-sublinhado">Portal de Informações</span> da Doença de von
+         Willebrand no Brasil! 🚀 </h3>
+      <hr>
+      <div class="button-container">
+        <a href="./dhemato.html"><button class="button-conhecer">Doenças Hematológicas</button></a>
+        <a href="./dvw.html"><button class="button-conhecer">Doença de von Willebrand</button></a>
+      </div>
   </main>
 
   <footer>
-    <p>doaSANGUE - 2023</p>
+    <p>doaSANGUE - 2023 - Versão 1.0</p>
   </footer>
 
 <button class="botao-topo"></button>
