--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
         <a href="./dhemato.html"><button class="button-conhecer">Doenças Hematológicas</button></a>
         <a href="./dvw.html"><button class="button-conhecer">Doença de von Willebrand</button></a>
       </div>
+
+      <div class="button-container2">
+        <a href="./dhemato.html"><button class="button-conhecer">Doenças Hematológicas</button></a>
+      </div>
+
+      <div class="button-container3">
+        <a href="./dvw.html"><button class="button-conhecer">Doença de von Willebrand</button></a>
+      </div>
       
 
     <section id="contato">
