--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       </div>
 
       <div class="button-container2">
-        <a href="./dhemato.html"><button class="button-conhecer">Doenças Hematológicas</button></a>
+        <a href="./dhemato.html"><button class="button-conhecer2">Doenças Hematológicas</button></a>
       </div>
 
       <div class="button-container3">
-        <a href="./dvw.html"><button class="button-conhecer">Doença de von Willebrand</button></a>
+        <a href="./dvw.html"><button class="button-conhecer3">Doença de von Willebrand</button></a>
       </div>
       
 
