--- a/acervo.html
+++ b/acervo.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <a class="header-logo" href="index.html">
-      <img src="./assets/img/logoOFC2.png" alt="doasangue-logo">
+      <img src="./assets/img/kitlogo/logonova.png" alt="doasangue-logo">
   </a>
    
     <nav>
